CORE-614 - An empty Main container now has only a top and bottom margin of zero to stop the feed from being left aligned

--- a/css/containers.less
+++ b/css/containers.less
@@ -43,7 +43,8 @@ body {
     }
 
     .main-empty:nth-of-type(1) {
-        margin: 0;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     .row {
